[gd_scene load_steps=9 format=3 uid="uid://m1bk5sdmi2ri"]

[ext_resource type="Script" uid="uid://dlu2ss2vpe65" path="res://Text Box/SCR_TextBox.gd" id="1_auj0r"]
[ext_resource type="Texture2D" uid="uid://c6cy8kwavv301" path="res://Assets/UI/Textures/Textbox_v2.png" id="2_k88rq"]
[ext_resource type="Texture2D" uid="uid://dpvehpguw3yst" path="res://Assets/UI/Textures/Speaker.png" id="3_fiq24"]
[ext_resource type="Theme" uid="uid://6jfd7is3o5k3" path="res://textbox_theme.tres" id="3_k88rq"]
[ext_resource type="FontFile" uid="uid://bhhup8y3o0yw1" path="res://Assets/UI/Chrisbday2025-Regular.ttf" id="5_k3t0n"]

[sub_resource type="Gradient" id="Gradient_gt3pc"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_45ukq"]
gradient = SubResource("Gradient_gt3pc")

[sub_resource type="LabelSettings" id="LabelSettings_towyp"]
font = ExtResource("5_k3t0n")
font_size = 60
font_color = Color(0.228653, 0.118385, 0.0703558, 1)
shadow_size = 0

[node name="TxtTextBox" type="CanvasLayer"]
script = ExtResource("1_auj0r")

[node name="Background" type="MarginContainer" parent="."]
z_as_relative = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Background"]
layout_mode = 2

[node name="FadeBlack" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 10
z_as_relative = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("GradientTexture2D_45ukq")

[node name="CharacterContainerLeft" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1082.0
offset_right = -839.0
offset_bottom = 932.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
scale = Vector2(-1, -1)
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 0

[node name="LeftContainer" type="GridContainer" parent="CharacterContainerLeft"]
clip_contents = true
layout_mode = 2

[node name="CharacterContainerRight" type="MarginContainer" parent="."]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1918.0
offset_right = 1082.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 0

[node name="RightContainer" type="GridContainer" parent="CharacterContainerRight"]
clip_contents = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_top = 815.0
offset_right = 1922.0
offset_bottom = 1080.0
metadata/_edit_use_anchors_ = true

[node name="TextboxTexture" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("2_k88rq")
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
visibility_layer = 3
layout_mode = 2
theme_override_constants/margin_bottom = 0

[node name="TextboxContainer" type="MarginContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 65
theme_override_constants/margin_top = -90
theme_override_constants/margin_bottom = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/TextboxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 180

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/TextboxContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 5

[node name="EndSymbol" type="Label" parent="PanelContainer/MarginContainer/TextboxContainer/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("3_k88rq")
theme_override_font_sizes/font_size = 45
text = "V"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/TextboxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="StartSymbol" type="Label" parent="PanelContainer/MarginContainer/TextboxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("3_k88rq")
text = "*"

[node name="Text" type="Label" parent="PanelContainer/MarginContainer/TextboxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("3_k88rq")
text = "This is the default text :D, you should NOT be seeing this"
autowrap_mode = 3
max_lines_visible = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 105
theme_override_constants/margin_top = -31

[node name="SpeakerTexture" type="TextureRect" parent="PanelContainer/MarginContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_fiq24")
stretch_mode = 4

[node name="Speaker" type="Label" parent="PanelContainer/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Gimberto"
label_settings = SubResource("LabelSettings_towyp")
